schema/testdata/validation_operation_unsupported_attribute/schema.keel
model Profile {
    fields {
        identity Identity {
            @unique
        }
        username Text {
            @unique
        }
    }

    operations {
        create createProfile(username) {
            @save(profile.identity = ctx.identity)
        }
    }
}